Dockerization & Swagger update in progress
